--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lobo - Desenvolver & Designer</title>
+    <title>Lobo - Desenvolver &  UX/UI Designer</title>
     <meta name="description" content="Desenvolvedor Front End & UI/UX Designer localizado no Rio de Janeiro">
     <link rel="stylesheet" href="/css/style.min.css">
 </head>
