--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Lobo - Desenvolver &  UX/UI Designer</title>
     <meta name="description" content="Desenvolvedor Front End & UI/UX Designer localizado no Rio de Janeiro">
     <link rel="stylesheet" href="/css/style.min.css">
+    <link rel="icon" href="./favicon.svg" type="image/svg+xml">
 </head>
 <body>
     <header class="header">
